[package]
name = "rust-chainlink-ea"
version = "0.1.0"
authors = ["Péter Garamvölgyi <th307q@gmail.com>"]
edition = "2018"

[lib]
name = "cfx_transaction"
path = "src/cfx-transaction/lib.rs"

[[bin]]
name = "rust-chainlink-ea"
path = "src/rust-chainlink-ea/main.rs"

[dependencies]
ethcore-bytes = "0.1.1"
ethereum-types = "0.9.2"
hex = "0.4.2"
keccak-hash = "0.5.1"
lazy_static = "1.4.0"
log = "0.4"
parity-crypto = "0.6.2"
parity-secp256k1 = "0.7.0"
pretty_env_logger = "0.4.0"
rlp = "0.4.6"
rlp-derive = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
web3 = "0.14.0"
zeroize = "1.2.0"